fixed navbar color on small devices

--- a/6-museum-of-candy/styles.css
+++ b/6-museum-of-candy/styles.css
@@ -42,6 +42,13 @@ body {
 	}
 }
 
+@media (max-width: 769px) {
+	.navbar {
+		background: rgb(222, 192, 222);
+		transition: background 500ms;
+	}
+}
+
 
 h2 {
 	color: #ea1c2c;
